k8s/Kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bram-vortex-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: kong
    # Διατηρούμε το strip-path false για να βλέπει η Java όλο το URL (/dashboard/...)
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          # --- 1. REPO ANALYZER (ORCHESTRATOR) ---
          # Χρησιμοποιούμε το /dashboard ως Prefix.
          # Πιάνει αυτόματα: /dashboard/repos, /dashboard/jobs,
          # /dashboard/analysis, /dashboard/internal κλπ.
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: repo-analyzer-svc
                port:
                  number: 80

          # --- 2. AUTH SERVICE ---
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: bram-vortex-auth-svc
                port:
                  number: 80
          - path: /login/oauth2/code
            pathType: Prefix
            backend:
              service:
                name: bram-vortex-auth-svc
                port:
                  number: 80


          # --- 3. FRONTEND (CATCH-ALL) ---
          # ΠΡΟΣΟΧΗ: Πρέπει να είναι ΠΑΝΤΑ τελευταίο στη λίστα
          # για να μη "κλέβει" τα αιτήματα που προορίζονται για τα API.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bram-vortex-frontend-svc
                port:
                  number: 80
